# acado_learing_tutorial

./: README.md
acado_learing_tutorial/: CMakeLists.txt  package.xml~
basic_mpc_implementation/: CMakeLists.txt  basic_mpc_implementation_node.cpp  package.xml  road.txt~
closed_loop_mpc/: CMakeLists.txt  closed_loop_mpc_node.cpp  package.xml  ref.txt
discrete_time_ocp/: CMakeLists.txt  discrete_time_ocp_node.cpp  package.xml
multi_objective_with_static_ocp/: CMakeLists.txt  multi_objective_with_static_ocp_node.cpp  package.xml
multi_objective_with_static_ocp/src/: multi_objective_with_static_ocp.cpp
multi_stage_ocp/: CMakeLists.txt  multi_stage_ocp_node.cpp  p.txt  package.xml
multi_stage_ocp/include/multi_stage_ocp/: multi_stage_ocp.h
nonlinear_OCP/: CMakeLists.txt  nonlinear_OCP_hardcoded_node.cpp  nonlinear_OCP_node.cpp  package.xml
rocket_flight/: CMakeLists.txt  package.xml  rocket_flight_node.cpp
semi_implicit_dae/: CMakeLists.txt  package.xml  semi_implicit_dae_node.cpp
single_shooting_NOCP/: CMakeLists.txt  package.xml  single_shooting_NOCP_node.cpp
state_parameter_estimation/: CMakeLists.txt  data.txt  package.xml  state_parameter_estimation_node.cpp
three_objective_with_static_ocp/: CMakeLists.txt~  package.xml~  three_objective_with_static_ocp_node.cpp
